# itasca-stub

./: .gitignore  LICENSE  README.md  build.py  itasca.pyi  main.prj  main.py  pyproject.toml  setup.py  stubgenc.py  upload.cmd  upload.py
itasca/: __init__.py  __init__.pyi  types.py
itasca/ball/: __init__.py
itasca/ball/thermal/: __init__.py
itasca/ballarray/: __init__.py
itasca/ballballarray/: __init__.py
itasca/ballpebblearray/: __init__.py  __init__.pyi
itasca/clump/: __init__.py  __init__.pyi
itasca/clump/pebble/: __init__.py  __init__.pyi
itasca/clump/template/: __init__.py
itasca/clump/thermal/: __init__.py  __init__.pyi
itasca/clumparray/: __init__.py
itasca/contact/: __init__.py
itasca/dfn/: __init__.py
itasca/dfn/fracture/: __init__.py
itasca/dfn/inter/: __init__.py
itasca/dfn/setinter/: __init__.py  __init__.pyi
itasca/dfn/template/: __init__.py  __init__.pyi
itasca/dfn/vertex/: __init__.py  __init__.pyi
itasca/facetarray/: __init__.py
itasca/fish/: __init__.py
itasca/history/: __init__.py
itasca/measure/: __init__.py  __init__.pyi
itasca/pebblearray/: __init__.py
itasca/pebblefacetarray/: __init__.py
itasca/rblock/: __init__.py
itasca/rblock/template/: __init__.py  __init__.pyi
itasca/rblockarray/: __init__.py
itasca/rblockrblockarray/: __init__.py
itasca/vertexarray/: __init__.py  __init__.pyi
itasca/wall/: __init__.py  __init__.pyi
itasca/wall/facet/: __init__.py
itasca/wall/thermal/: __init__.py
itasca/wall/vertex/: __init__.py
itasca/wallarray/: __init__.py  __init__.pyi
(+4 files in other folders)
