[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "itasca-stub-pfc7"
version = "1.0.4"
description = "Itasca PFC python stub"
authors = [ "panhaoyu <panhaoyu.china@outlook.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/panhaoyu/itasca-stub"
repository = "https://github.com/panhaoyu/itasca-stub"
documentation = "https://github.com/panhaoyu/itasca-stub"
keywords = [ "itasca", "stub", "pfc",]
[[tool.poetry.packages]]
include = "itasca"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
toml = "^0.10.2"
